<resources>
    <string name="app_name">MyPalm Controller</string>
    <string name="company_name">PMC</string>
    <string name="title">LOADING RAMP CONTROL</string>
    <string name="loading_ramp">Loading Ramp\t:\t</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="save">Save</string>
    <string name="starter_motor">Starter Motor \t:\t</string>
    <string name="door_open_cmd">door_open_cmd</string>
    <string name="door_close_cmd">door_close_cmd</string>
    <string name="replace_string">[DOOR_X]</string>
    <string name="icon_description">No icon</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="emergency_stop">Emergency Stop</string>
    <string name="auto_feeding_title">AUTO FEEDING</string>
    <string name="sfb_conveyor_title">SFB CONVEYOR</string>
    <string name="ffb_conveyor_title">FFB CONVEYOR</string>
    <string name="available_doors_title">AVAILABLE DOORS</string>
    <string name="level">Level</string>
    <string name="digester_leave">Digester level</string>
    <string name="current_speed">Current speed</string>
    <string name="hint_door_open_cmd">Loading Ramp door open</string>
    <string name="hint_door_close_cmd">Loading Ramp door close</string>
    <string name="hint_starter_motor_cmd">Starter motor</string>
    <string name="edit_button_cmds">Edit Button Command</string>
    <string name="cp_sfb_conveyor_title">SFB Conveyor</string>
    <string name="cp_ffb_conveyor_title">FFB Conveyor</string>
    <string name="cp_loading_ramp">Loading Ramp</string>
    <string name="hint_ffb_start">FFB Conveyor Start</string>
    <string name="hint_ffb_stop">FFB Conveyor Stop</string>
    <string name="hint_ffb_eme_stop">FFB Conveyor Emergency Stop</string>
    <string name="hint_sfb_start">SFB Conveyor Start</string>
    <string name="hint_sfb_stop">SFB Conveyor Stop</string>
    <string name="hint_sfb_eme_stop">SFB Conveyor Emergency Stop</string>
    <string name="go_back">Back to Home</string>
    <string name="reset">Reset</string>
    <string name="mqtt_confid">Mqtt Config</string>
    <string name="door_cameras">Door Cameras</string>
    <string name="door_control">Door Control \t:\t</string>
    <string name="home">Home</string>
    <string name="config">Config</string>
    <string name="auto_feeding">Auto Feeding</string>
    <string name="sfb_conveyor">SFB Conveyor</string>
    <string name="ffb_conveyor">FFB Conveyor</string>
    <string name="available_doors">Available Doors</string>
    <string name="conveyor_1">Conveyor 1</string>
    <string name="conveyor_2">Conveyor 2</string>
    <string name="conveyor_3">Conveyor 3</string>
    <string name="conveyor_4">Conveyor 4</string>
    <string name="conveyor_5">Conveyor 5</string>
    <string name="gif_description">"gif "</string>
    <string name="sfb_conveyor_1">SFB 1</string>
    <string name="sfb_conveyor_2">SFB 2</string>
    <string name="sfb_conveyor_3">SFB 3</string>
    <string name="ffb_conveyor_1">FFB 1</string>
    <string name="ffb_conveyor_2">FFB 2</string>
    <string name="ffb_conveyor_3">FFB 3</string>
    <string name="ffb_conveyor_4">FFB 4</string>
    <string name="ffb_conveyor_5">FFB 5</string>
    <string name="status">Status</string>
    <string name="run">Run</string>
    <string name="e_stop">E_Stop</string>
    <string name="ai">AI Mode \t:\t</string>
    <string name="disable">Disable</string>
    <string name="enable">Enable</string>
    <string name="reconnect">Reconnect</string>
    <string name="connect">Connected</string>
    <string name="my_palm_mode">MyPalm Mode</string>
    <string name="scada_mode">Scada Mode</string>
    <string name="manual_mode">Manual Mode</string>
    <string name="ffb_alert_msg_single">FFB Conveyor started. Can we start feeding?</string>
    <string name="ffb_alert_msg_multiple">FFB Conveyors started. Can we start feeding?</string>
    <string name="ffb_alert_confirm">Yes</string>
    <string name="ffb_alert_title">Are you Sure?</string>
    <string name="select_all">Select All</string>
    <string name="clear">Clear</string>
    <string name="mode">Mode \t:\t</string>
    <string name="auto_feeding_1">Autofeeder 1</string>
    <string name="auto_feeding_2">Autofeeder 2</string>
    <string name="speed">Speed</string>
    <string name="ffb_mode">Mode</string>
    <string name="auto">Auto</string>
    <string name="manual">Manual</string>
    <string name="ffb_auto">Auto</string>
    <string name="ffb_manual">Manual</string>
    <string name="ai_mode_alert_title">Ai-Mode Alert</string>
    <string name="listening_mode">Minister Mode</string>
    <string name="initialized_to_turn_off">Initialized to Off</string>
    <string name="ai_mode_turn_off">Ai Mode Off</string>
    <string name="ai_mode_turn_on">Ai Mode On</string>
    <string name="reset_all">Reset All</string>
    <string name="processing">Processing... Please wait...</string>
    <string name="ready">Ready</string>
    <string name="not_ready">Not ready</string>
    <string name="ffb_system">FFB System \t:\t</string>
    <string name="sfb_system">SFB System \t:\t</string>
    <string name="human_detected_alert_title">Human Alert</string>
    <string name="human_detected_alert_msg">Human detected nearby</string>
    <string name="stuck_door">Stuck Door</string>

</resources>