<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:backgroundTint="@color/white"
    app:cardBackgroundColor="@color/white"
    app:cardCornerRadius="12dp"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:padding="24dp"
        >

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/lottieAnimationView"
            android:layout_width="150dp"
            android:layout_height="150dp"
            app:lottie_autoPlay="true"
            android:layout_marginBottom="20dp"
            app:lottie_loop="true"
            app:lottie_rawRes="@raw/alart" />


        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:letterSpacing=".02"
            android:paddingVertical="4dp"
            android:gravity="center"
            android:text="@string/ffb_alert_title"
            android:textColor="@color/black"
            android:textFontWeight="880"
            android:textSize="26sp"
            android:paddingHorizontal="20dp"
            android:paddingBottom="20dp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/tv_msg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:letterSpacing=".02"
            android:paddingVertical="4dp"
            android:gravity="center"
            android:text="@string/ffb_alert_msg_multiple"
            android:textColor="@color/black"
            android:textFontWeight="580"
            android:textSize="16sp"
            android:paddingHorizontal="20dp"
            android:textStyle="bold"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_confirm"
            android:layout_width="wrap_content"
            android:paddingHorizontal="40dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginHorizontal="9dp"
            android:layout_weight=".5"
            android:background="@drawable/bg_tv_auto_feed"
            android:text="@string/ffb_alert_confirm"
            android:textSize="14sp"
            app:backgroundTint="@null"
            app:rippleColor="@color/lite_white" />

    </LinearLayout>

</androidx.cardview.widget.CardView>